--- a/app/templates/outils-agricoles.html
+++ b/app/templates/outils-agricoles.html
@@ -452,8 +452,8 @@
                             </div>
             
                             <div class="modal-footer">
-                                <button type="submit" class="btn btn-primary" onclick="saveEditOutil()">Enregistrer</button>
-                                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Annuler</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                                <button type="button" class="btn btn-primary" onclick="saveEditOutil()">Enregistrer les modifications</button>
                             </div>
                         </form>
                     </div>
