--- a/app/templates/graines-pousses.html
+++ b/app/templates/graines-pousses.html
@@ -407,8 +407,8 @@
                             </div>
                             
                             <div class="modal-footer">
-                                <button type="submit" class="btn btn-primary" onclick="saveEditGraine()">Enregistrer</button>
-                                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Annuler</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                                <button type="button" class="btn btn-primary" onclick="saveEditGraine()">Enregistrer les modifications</button>
                             </div>
                         </form>
                     </div>
